--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "pnpm tsc",
-    "test:server-start": "tsc && pnpx tsx tests/server/index.ts"
+    "build": "esbuild src/index.ts --bundle --outfile=dist/index.js",
+    "test:server-start": "pnpm build && pnpx tsx tests/server/index.ts",
+    "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "prepare": "husky",
+    "test:e2e": "pnpm playwright test",
+    "test:unit": "pnpm vitest run",
+    "test": "pnpm test:unit && pnpm test:e2e"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +19,14 @@
     "@fastify/static": "^8.0.3",
     "@playwright/test": "^1.49.0",
     "@types/node": "^22.10.1",
+    "esbuild": "^0.24.0",
     "fastify": "^5.1.0",
-    "typescript": "^5.7.2"
+    "happy-dom": "^15.11.7",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.4.1",
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.6"
   },
   "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387"
 }
