--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:e2e": "pnpm playwright test",
     "test:unit": "pnpm vitest run",
     "test:unit:coverage": "pnpm vitest run --coverage",
-    "test": "pnpm test:unit && pnpm test:e2e && pnpm format"
+    "test": "pnpm test:unit && pnpm test:e2e",
+    "hook:precommit": "pnpm test && pnpm format"
   },
   "keywords": [],
   "author": "",
