--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -35,5 +35,8 @@ jobs:
       - name: Unit Tests
         run: pnpm test:unit
 
+      - name: Install Playwright Browsers
+        run: pnpm exec playwright install --with-deps
+
       - name: Integration Tests
         run: pnpm test:e2e
